--- a/css/sass/_screen_768.scss
+++ b/css/sass/_screen_768.scss
@@ -138,7 +138,7 @@ div#search-container {
 }
 
 .pagination {
-    margin: 0 0 (.5 * $spacing-unit);
+    margin: (.5 * $spacing-unit) 0;
 }
 
 /*Search Results */
